adguard/adguard-sync-deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguard-sync
  namespace: adguard
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
spec:
  serviceName: adguard-sync
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: adguard-sync
  template:
    metadata:
      labels:
        app: adguard-sync
        name: adguard-sync
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      automountServiceAccountToken: false
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
      containers:
      - name: adguard-sync
        image: ghcr.io/bakito/adguardhome-sync:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
            add:
            - "CHOWN"
            - "SETGID"
            - "SETUID"
            - "DAC_OVERRIDE"
        command: ["/opt/go/adguardhome-sync","run"]
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      # volumes:
      # - configMap:
      #     items:
      #     - key: adguardhome-sync.yaml
      #       path: adguardhome-sync.yaml
      #     name: adguard-sync-config
      #   name: adguard-sync-config
      # - name: adguard-creds
      #   secret: 
      #     secretName: adguard-creds
