adguard/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguard
  namespace: adguard
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
spec:
  serviceName: adguard
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
        name: adguard
    spec:
      restartPolicy: Always
      automountServiceAccountToken: false
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
              - key: kubernetes.io/arch
                operator: In
                values: 
                - 'amd64'
      containers:
      - name: adguard
        image: adguard/adguardhome
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          runAsUser: 1000
          runAsGroup: 100
          seccompProfile:
            type: RuntimeDefault
        resources:
          requests:
            cpu: 150m
            memory: 150Mi
          limits:
            cpu: 1600m
            memory: 500Mi
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        - containerPort: 9053
          name: dns-tcp
          protocol: TCP
        - containerPort: 9053
          name: dns-udp
          protocol: UDP
        - containerPort: 9853
          name: dns-tls
          protocol: TCP
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /login.html
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /login.html
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - name: nfs-adguard-conf
          mountPath: /opt/adguardhome/conf
        - name: nfs-adguard-work
          mountPath: /opt/adguardhome/work
        - name: wildcard-cert
          mountPath: /etc/certs
          readOnly: true
      volumes:
      - name: nfs-adguard-conf
        persistentVolumeClaim:
          claimName: nfs-adguard-conf
      - name: nfs-adguard-work
        persistentVolumeClaim:
          claimName: nfs-adguard-work
      - name: wildcard-cert
        secret:
          secretName: wildcard-cert
