adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: adguard
  name: adguard-web
  namespace: adguard
spec:
  type: ClusterIP
  ports:
  - name: adguard-web
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app: adguard
 

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: adguard
  name: adguard-dns
  namespace: adguard
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.1.16
  ports:
  - name: dns-tcp
    # nodePort: 30725
    port: 53
    protocol: TCP
    targetPort: 53 #dns-tcp
  - name: dns-tls
    # nodePort: 32725
    port: 853
    protocol: TCP
    targetPort: 853 #dns-tls
  - name: dns-udp
    # nodePort: 30725
    port: 53
    protocol: UDP
    targetPort: 53 #dns-udp
  selector:
    app: adguard
