adguard/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: adguard
  namespace: adguard
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "3000"
    - fromEndpoints:
        - matchLabels:
            app: cloudflare-tunnel
      toPorts:
        - ports:
            - port: "3000"
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "53"
        - ports:
            - port: "853"
    - fromEndpoints:
        - matchLabels:
            app: external-dns
            io.kubernetes.pod.namespace: external-dns
      toPorts:
        - ports:
            - port: "3000"
    - fromEndpoints:
        - {}
      toPorts:
        - ports:
            - port: "3000"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - {}
      toPorts:
        - ports:
            - port: "3000"
    - toCIDRSet:
        - cidr: 0.0.0.0/0
      toPorts:
        - ports:
            - port: "443"
        - ports:
            - port: "853"
        - ports:
            - port: "53"
